rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax21/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		void m(int i) { }
	}
}